# dftbridge

./: .gitignore  LICENSE  MANIFEST.in  Makefile  README.md  pyproject.toml  requirements.txt  setup.py
docs/: README.md
src/dftbridge/: mash.py  utils.py
src/dftbridge/extractors/: base_extractor.py  grep.py
src/psuedo_lammps/: __init__.py  core.py  mniput.py
tests/: qe_dft_example.txt  test_core.py  test_utils.py
